test/chainsaw/authpolicy/owner_reference_desired_update/foreign-request-authentication-assert.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: auth-policy
spec:
  selector:
    matchLabels:
      app: foreign-app
  jwtRules:
    - issuer: https://foreign-issuer.example.com
      jwksUri: https://foreign-issuer.example.com/.well-known/jwks.json
